# cmake_test

./: CMakeLists.txt  README.md
libs/MyLib/: CMakeLists.txt  MyLib.cpp  MyLib.hpp
src/: main.cpp
